# postcard-forth

./: README.md
source/example/: Cargo.toml
source/example/src/: main.rs
source/postcard-forth/: Cargo.toml
source/postcard-forth-derive/: Cargo.toml
source/postcard-forth-derive/src/: de.rs  lib.rs  ser.rs
source/postcard-forth/src/: lib.rs
source/rp2040-demo/: Cargo.toml  bench.txt  results.md
source/rp2040-demo/results-128/baseline/: 128-cargo-timing-20240609T115332Z.html  size.txt
source/rp2040-demo/results-128/postcard-forth/: 128-cargo-timing-20240609T120459Z.html  gen-lines.txt  lines.txt  size.txt
source/rp2040-demo/results-128/serde/: 128-cargo-timing-20240609T120059Z.html  lines.txt  size.txt
source/rp2040-demo/results-512-noenums/postcard-forth/: cargo-timing-20240609T125315Z.html  lines.txt  size.txt
source/rp2040-demo/results-512-noenums/serde/: cargo-timing-20240609T125044Z.html  gen-lines.txt  lines.txt  size.txt
source/rp2040-demo/results-512-onlyprims/postcard-forth/: cargo-timing-20240609T130831Z.html  lines.txt  size.txt
source/rp2040-demo/results-512-onlyprims/serde/: cargo-timing-20240609T130533Z.html  gen-lines.txt  lines.txt  size.txt
source/rp2040-demo/results-512/postcard-forth/: cargo-timing-20240609T121428Z.html  lines.txt  size.txt
source/rp2040-demo/results-512/postcard-forth-inlined/: cargo-timing-20240610T091624Z.html  lines.txt  size.txt
source/rp2040-demo/results-512/serde/: cargo-timing-20240609T121143Z.html  gen-lines.txt  lines.txt  size.txt
source/rp2040-demo/src/: gen.rs  main.rs
source/stress-gen/: Cargo.toml
source/stress-gen/src/: main.rs
